# SpikeLab

./: .buildinfo  .dockerignore  .gitignore  .readthedocs.yml  Agent.md  Dockerfile  LICENSE  Makefile  NEURON_ATTRIBUTES_IMPLEMENTATION.md  README.md  __init__.py  data_exporters.html  data_loaders.html  docker-compose.yml  environment.yml  functional_connectivity.py  genindex.html  getting_started.html  index.html  migration_tips.html  objects.inv  py-modindex.html  pyproject.toml  pyproject.toml.bak  search.html  searchindex.js  spikedata.html  standalone_utilities.html
.github/workflows/: black.yml  docs.yml  tests.yml
_modules/: index.html
_modules/data_loaders/: data_exporters.html  data_loaders.html
_modules/spikedata/: spikedata.html  utils.html
_sources/: data_exporters.rst.txt  data_loaders.rst.txt  getting_started.rst.txt  index.rst.txt  spikedata.rst.txt
_sources/api/: batch_jobs.rst.txt  index.rst.txt  pairwise.rst.txt  plot_utils.rst.txt  s3_utils.rst.txt  spike_sorting.rst.txt  workspace.rst.txt
_sources/class_methods/: binning_and_rasters.rst.txt  time_windowing.rst.txt
_sources/data_exporters/: nwb.rst.txt
_sources/getting_started/: installation.rst.txt  quickstart.rst.txt
_sources/guides/: artifact_packaging_zip.rst.txt  batch_jobs.rst.txt  batch_policy_guardrails.rst.txt  exporting_data.rst.txt  firing_rates.rst.txt  index.rst.txt  mcp_server.rst.txt  spike_analysis.rst.txt  spike_sorting.rst.txt
agent_swarm/: README.md  main.py
agent_swarm/agents/: base.py  factory.py
agent_swarm/artifacts/: Design_Doc_Functional_Connectivity_Implementation.md  Design_Doc_Functional_Connectivity_Metric.md  Design_Doc_Functional_Connectivity_Metric.txt  FunctionalConnectivity.py  FunctionalConnectivityMetric.py  Functional_Connectivity_Design_Doc.md  Functional_Connectivity_Metric_Research_Notes.txt  Functional_Connectivity_Research_Notes.md  Research_Notes_Functional_Connectivity_Paper.txt  functional_connectivity_metric.py  test_functional_connectivity.py  test_functional_connectivity_metric.py
agent_swarm/core/: state.py  swarm.py
agent_swarm/tests/: connectivity_test.py  test_pure_autogen.py
agent_swarm/tools/: artifact_tools.py  autogen_tools.py  file_tools.py  github_tools.py  mcp_tools.py  pubmed_tools.py  qmd_tools.py  research_tools.py  slack_tools.py  terminal_tools.py
api/: batch_jobs.html  curation.html  data_exporters.html  data_loaders.html  index.html  mcp_server.html  pairwise.html  plot_utils.html  ratedata.html  rateslicestack.html  s3_utils.html  spike_sorting.html  spikedata.html  spikeslicestack.html  stat_utils.html  utilities.html  workspace.html
class_methods/: binning_and_rasters.html  data_selection.html  export_methods.html  firing_rates.html  index.html  interspike_intervals.html  latency_analysis.html  sttc.html  time_windowing.html
data_exporters/: hdf5.html  kilosort.html  nwb.html
data_loaders/: __init__.py  data_exporters.py  data_loaders.py  hdf5.html  hdf5_thresholding.html  kilosort.html  main.py  nwb.html  s3_utils.py  spikeinterface.html
deploy/: launch.sh  spikelab-daemon.service
docker/analysis-base/: Dockerfile.cpu  Dockerfile.gpu  entrypoint.sh
docker/analysis-temp/: Dockerfile.temp  README.md  run_analysis.py
docker/kilosort2/: run.sh
docker/kilosort4/: Dockerfile
docs/: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  crontab  nginx.conf  rebuild-docs.sh  supervisord.conf
docs/source/: conf.py  data_exporters.rst  data_loaders.rst  getting_started.rst  index.rst  migration_tips.rst  neuron_attributes.rst  neuron_attributes_guide.rst  spikedata.rst  standalone_utilities.rst
examples/: README.md  manuscript_analysis.ipynb
examples/batch_jobs/: temp_cpu_job.yaml  temp_gpu_job.yaml
examples/nrp_jobs/: temp_cpu_job.yaml  temp_gpu_job.yaml
getting_started/: index.html  installation.html  quickstart.html
guides/: artifact_packaging_zip.html  batch_docker_workflow.html  batch_jobs.html  batch_jobs_quickstart.html  batch_policy_guardrails.html  event_aligned_analysis.html  exporting_data.html  firing_rates.html  gplvm.html  hippie_classification.html  index.html  loading_data.html  mcp_server.html  pairwise_analysis.html  parallel_computing.html  shuffled_data.html  spike_analysis.html  spike_sorting.html  workspace.html
luka_assignments/: burst_frac.ipynb
mcp_server/: README.md  __init__.py  __main__.py  results.py  s3_utils.py  server.py  sessions.py
mcp_server/tools/: __init__.py  analysis.py  data_loaders.py  exporters.py
old_plots/: original_plot_distributions.py  original_plot_heatmap.py  original_plot_raster.py
scripts/: gen_client_skills.py  generate_job_config.py  generate_sorting_figures.py  nrp_build_temp_image.sh  nrp_generate_job_config.py  push_temp_image.sh
spikedata/: TODO.md  __init__.py  neuron_attributes.py  pairwise.py  plot_utils.py  ratedata.py  rateslicestack.py  slicestack.py  spikedata.py  spikeslicestack.py  stat_utils.py  utils.py
spikes/: connectivity.py
src/spikelab/: __init__.py
tests/: TESTDOCS.md  _find_merges.py  _merge_classes.py  _rename_classes.py  test_batch_jobs.py  test_canary.py  test_classified_errors.py  test_connectivity.py  test_coverage_gaps.py  test_curation.py  test_data_exporters_gaps.py  test_data_loaders_coverage.py  test_data_loaders_gaps.py  test_dataexporters.py  test_dataloaders.py  test_decoding.py  test_docker_smoke.py  test_extra_safeguards.py  test_guards.py  test_mcp_server.py  test_neuron_attributes.py  test_nrp_jobs.py  test_numba_utils.py  test_pairwise.py  test_plot_utils.py  test_pure_autogen.py  test_ratedata.py  test_rateslicestack.py  test_s3_utils.py  test_sorting_report.py  test_spike_sorting.py  test_spikedata.py  test_spikeslicestack.py  test_stat_utils.py  test_stim_sorting.py  test_utils.py  test_waveform_extractor_streaming.py  test_workspace.py
tests/mcp/: README.md  _common.py  (+20 more)
viz/: new_plot_distributions.py  new_plot_heatmap.py  new_plot_raster.py
workspace/: hdf5_io.py  workspace.py
(+249 files in other folders)
