[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "integrated-analysis-tools"
version = "0.0.0"
description = "Analysis tools for automated closed-loop experimentation and analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SpikeLab Maintainers" }
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.5",
  "mcp>=0.9.0",
  "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
include = ["spikedata*", "data_loaders*", "mcp_server*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "black>=24.0",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.25",
]
hdf5 = [
  "h5py>=3.0.0",
]
s3 = [
  "boto3>=1.28.0",
]
all = [
  "h5py>=3.0.0",
  "boto3>=1.28.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '(\.git|\.venv|build|dist)'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".."]
filterwarnings = [
    "ignore::DeprecationWarning:quantities",
    "ignore:numpy.core is deprecated:DeprecationWarning",
    "ignore:__array_wrap__ must accept context:DeprecationWarning",
]


