[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spikelab"
version = "0.1.0"
description = "Python library for agentic spike train analysis of neural electrophysiology data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  { name = "Tjitse van der Molen" },
  { name = "Braingeneers" },
  { name = "SpikeLab Maintainers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.5",
  "pandas>=1.3",
  "mcp>=0.9.0",
  "h5py>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spikelab*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "black>=24.0",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.25",
]
s3 = [
  "boto3>=1.28.0",
]
gplvm = [
  "poor-man-gplvm>=0.1.0",
  "jax>=0.4.26",
  "jaxlib>=0.4.26",
  "jaxopt>=0.8.2",
  "optax>=0.2.2",
]
all = [
  "boto3>=1.28.0",
  "poor-man-gplvm>=0.1.0",
  "jax>=0.4.26",
  "jaxlib>=0.4.26",
  "jaxopt>=0.8.2",
  "optax>=0.2.2",
]

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '(\.git|\.venv|build|dist)'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: async test (requires pytest-asyncio)",
]
filterwarnings = [
    "ignore::DeprecationWarning:quantities",
    "ignore:numpy.core is deprecated:DeprecationWarning",
    "ignore:__array_wrap__ must accept context:DeprecationWarning",
]


